--- a/service_router_framework/interfaces/kits/js/serviceroutermgr/BUILD.gn
+++ b/service_router_framework/interfaces/kits/js/serviceroutermgr/BUILD.gn
@@ -23,7 +23,7 @@ ohos_shared_library("businessabilityrouter") {
     cfi_cross_dso = true
     debug = false
   }
-  stack_protector_ret = true
+  branch_protector_ret = "pac_ret"
 
   include_dirs = [ "${bundlefwk_kits_path}/js/common" ]
 
