quick fix add permission
Signed-off-by: zhuhan <zhuhan10@huawei.com>
Change-Id: I12984610dc8a08ef82f6eb0f287d271a0b496e00

--- a/services/quickfixmgr/quick_fix.cfg
+++ b/services/quickfixmgr/quick_fix.cfg
@@ -5,7 +5,9 @@
             "ondemand" : true,
             "uid" : "quickfixserver",
             "gid" : ["system"],
-            "secon" : "u:r:quick_fix:s0"
+            "secon" : "u:r:quick_fix:s0",
+            "apl" : "system_basic",
+            "permission" : ["ohos.permission.RUNNING_STATE_OBSERVER"]
         }
     ]
 }
