--- a/test/unittest/quick_fix/quick_fix_manager_service_test/BUILD.gn
+++ b/test/unittest/quick_fix/quick_fix_manager_service_test/BUILD.gn
@@ -97,6 +97,9 @@ ohos_unittest("quick_fix_manager_apply_task_test") {
     "ability_runtime:abilitykit_native",
     "ability_runtime:app_manager",
     "ability_runtime:quickfix_manager",
+    "access_token:libaccesstoken_sdk",
+    "access_token:libnativetoken",
+    "access_token:libtoken_setproc",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
