--- a/interfaces/inner_api/app_manager/BUILD.gn
+++ b/interfaces/inner_api/app_manager/BUILD.gn
@@ -66,6 +66,8 @@ ohos_shared_library("app_manager") {
     "src/appmgr/app_mgr_stub.cpp",
     "src/appmgr/app_process_data.cpp",
     "src/appmgr/app_record_id.cpp",
+    "src/appmgr/app_running_status_proxy.cpp",
+    "src/appmgr/app_running_status_stub.cpp",
     "src/appmgr/app_scheduler_host.cpp",
     "src/appmgr/app_scheduler_proxy.cpp",
     "src/appmgr/app_service_manager.cpp",
