--- a/services/appmgr/BUILD.gn
+++ b/services/appmgr/BUILD.gn
@@ -44,6 +44,7 @@ ohos_shared_library("libappms") {
     "src/app_process_manager.cpp",
     "src/app_running_manager.cpp",
     "src/app_running_record.cpp",
+    "src/app_running_status_module.cpp",
     "src/app_spawn_client.cpp",
     "src/app_spawn_msg_wrapper.cpp",
     "src/app_spawn_socket.cpp",
