--- a/test/unittest/frameworks_kits_appkit_native_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_appkit_native_test/BUILD.gn
@@ -476,6 +476,7 @@ ohos_unittest("appfreeze_inner_test") {
 
   include_dirs = [
     "${ability_runtime_path}/interfaces/kits/native/appkit/app",
+    "${ability_runtime_path}/utils/global/time/include",
     "//third_party/json/include",
   ]
 
