extension auto disconnect
Signed-off-by: donglin <donglin9@huawei.com>
Change-Id: I6a50902d4c35bd17022bdb5f28649b7bff9043eb

--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -34,6 +34,7 @@ abilityms_files = [
   "src/data_ability_record.cpp",
   "src/lifecycle_deal.cpp",
   "src/ability_running_info.cpp",
+  "src/extension_config.cpp",
   "src/extension_running_info.cpp",
   "src/caller_info.cpp",
   "src/sender_info.cpp",
