--- a/test/unittest/ability_record_test/BUILD.gn
+++ b/test/unittest/ability_record_test/BUILD.gn
@@ -100,6 +100,7 @@ ohos_unittest("ability_record_test_call") {
   ]
 
   sources = [
+    "${ability_runtime_services_path}/abilitymgr/src/extension_config.cpp",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/src/appmgr/mock_app_scheduler.cpp",
     "ability_record_test_call.cpp",  # add mock file
   ]
