--- a/test/unittest/data_ability_manager_test/BUILD.gn
+++ b/test/unittest/data_ability_manager_test/BUILD.gn
@@ -31,6 +31,7 @@ ohos_unittest("data_ability_manager_test") {
 
   sources = [
     "${ability_runtime_services_path}/abilitymgr/src/app_scheduler.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/extension_config.cpp",
     "data_ability_manager_test.cpp",  # add mock file
   ]
 
