--- a/test/unittest/form_extension_context_test/BUILD.gn
+++ b/test/unittest/form_extension_context_test/BUILD.gn
@@ -26,6 +26,7 @@ ohos_unittest("form_extension_context_test") {
   ]
 
   sources = [
+    "${ability_runtime_services_path}/abilitymgr/src/extension_config.cpp",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/src/appmgr/mock_app_scheduler.cpp",
     "form_extension_context_test.cpp",  # add mock file
   ]
