--- a/services/uripermmgr/BUILD.gn
+++ b/services/uripermmgr/BUILD.gn
@@ -57,6 +57,7 @@ ohos_shared_library("libupms") {
     "ability_base:want",
     "ability_base:zuri",
     "access_token:libaccesstoken_sdk",
+    "access_token:libtokenid_sdk",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
