--- a/test/unittest/uri_permission_persistable_test/BUILD.gn
+++ b/test/unittest/uri_permission_persistable_test/BUILD.gn
@@ -49,6 +49,7 @@ ohos_unittest("uri_permission_persistable_test") {
     "ability_base:zuri",
     "access_token:libnativetoken",
     "access_token:libtoken_setproc",
+    "access_token:libtokenid_sdk",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "c_utils:utils",
