--- a/test/unittest/uri_permission_test/BUILD.gn
+++ b/test/unittest/uri_permission_test/BUILD.gn
@@ -35,6 +35,7 @@ ohos_unittest("uri_permission_test") {
 
   external_deps = [
     "ability_base:zuri",
+    "access_token:libtokenid_sdk",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
     "init:libbeget_proxy",
