To limit the life span of serviceExtensions that are alive but have no connection.
Signed-off-by: wangzhen <wangzhen346@huawei.com>
Change-Id: I3c31dbd59912d23872296da4ff92f43bf4d655d0

--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -116,3 +116,7 @@ if (ability_runtime_graphics) {
     "src/system_dialog_scheduler.cpp",
   ]
 }
+
+if (efficiency_manager) {
+  abilityms_files += [ "src/process_frozen_state_observer.cpp" ]
+}
