childProcessManager错误码规范修改
Signed-off-by: zhangyuhang72 <zhangyuhang72@huawei.com>
Change-Id: I945c4af416d6ad82bf10610c1f414ec063e3c66c

--- a/interfaces/inner_api/child_process_manager/BUILD.gn
+++ b/interfaces/inner_api/child_process_manager/BUILD.gn
@@ -30,6 +30,7 @@ ohos_shared_library("child_process_manager") {
   sources = [
     "${ability_runtime_native_path}/ability/native/child_process_manager/child_process.cpp",
     "${ability_runtime_native_path}/ability/native/child_process_manager/child_process_manager.cpp",
+    "${ability_runtime_native_path}/ability/native/child_process_manager/child_process_manager_error_utils.cpp",
     "${ability_runtime_native_path}/ability/native/child_process_manager/js_child_process.cpp",
   ]
 
