--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -363,6 +363,7 @@ group("unittest") {
     "authorization_result_test:unittest",
     "background_task_observer_test:unittest",
     "call_record_test:unittest",
+    "child_process_manager_test:unittest",
     "completed_dispatcher_test:unittest",
     "configuration_test:unittest",
     "connect_server_manager_test:unittest",
