--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -54,6 +54,7 @@ group("napi_packages") {
     "${ability_runtime_napi_path}/inner/napi_common:napi_common",
     "${ability_runtime_napi_path}/insight_intent/insight_intent:insightintent_napi",
     "${ability_runtime_napi_path}/insight_intent/insight_intent_driver:insightintentdriver_napi",
+    "${ability_runtime_napi_path}/insight_intent/insight_intent_executor:insightintentexecutor_napi",
     "${ability_runtime_napi_path}/insight_intent_context:insightintentcontext_napi",
     "${ability_runtime_napi_path}/js_child_process:childprocess_napi",
     "${ability_runtime_napi_path}/js_child_process_manager:childprocessmanager_napi",
