--- a/frameworks/native/ability/native/etc/extension_blocklist_config.json
+++ b/frameworks/native/ability/native/etc/extension_blocklist_config.json
@@ -159,8 +159,7 @@
             "application.formProvider",
             "prompt",
             "promptAction",
-            "window",
-            "system.prompt"
+            "window"
         ],
         "DriverExtension": [
             "abilityAccessCtrl",
@@ -276,8 +275,7 @@
             "application.formProvider",
             "prompt",
             "promptAction",
-            "window",
-            "system.prompt"
+            "window"
         ],
         "RemoteLocationExtension": [
             "notification",
