--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -139,6 +139,8 @@ ohos_source_set("abilityms_test_source") {
     "${ability_runtime_services_path}/abilitymgr/src/dlp_state_item.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/free_install_manager.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/insight_intent_execute_manager.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/insight_intent_profile.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/insight_intent_utils.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/lifecycle_deal.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/pending_want_common_event.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/pending_want_key.cpp",
@@ -205,6 +207,7 @@ ohos_source_set("abilityms_test_source") {
     "access_token:libaccesstoken_sdk",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
+    "bundle_framework:libappexecfwk_common",
     "c_utils:utils",
     "common_event_service:cesfwk_core",
     "common_event_service:cesfwk_innerkits",
