--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -247,9 +247,11 @@ ohos_shared_library("abilitykit_native") {
     "${ability_runtime_innerkits_path}/wantagent:wantagent_innerkits",
     "${ability_runtime_native_path}/ability:ability_context_native",
     "${ability_runtime_native_path}/ability/native:ability_business_error",
+    "${ability_runtime_native_path}/ability/native:insight_intent_executor",
     "${ability_runtime_native_path}/appkit:app_context",
     "${ability_runtime_native_path}/appkit:app_context_utils",
     "${ability_runtime_native_path}/appkit:appkit_delegator",
+    "${ability_runtime_native_path}/insight_intent/insight_intent_context:insightintentcontext",
     "${ability_runtime_path}/utils/global/freeze:freeze_util",
     "${ability_runtime_services_path}/common:event_report",
   ]
@@ -413,6 +415,7 @@ config("insight_intent_executor_public_config") {
 ohos_shared_library("insight_intent_executor") {
   sources = [
     "${ability_runtime_native_path}/ability/native/insight_intent_executor/insight_intent_executor.cpp",
+    "${ability_runtime_native_path}/ability/native/insight_intent_executor/insight_intent_executor_mgr.cpp",
     "${ability_runtime_native_path}/ability/native/insight_intent_executor/js_insight_intent_executor.cpp",
   ]
 
@@ -423,6 +426,7 @@ ohos_shared_library("insight_intent_executor") {
     "${ability_runtime_innerkits_path}/runtime:runtime",
     "${ability_runtime_napi_path}/inner/napi_common:napi_common",
     "${ability_runtime_native_path}/ability/native:ability_business_error",
+    "${ability_runtime_native_path}/insight_intent/insight_intent_context:insightintentcontext",
   ]
 
   external_deps = [
