huangshiwei4@huawei.com
Signed-off-by: huangshiwei <huangshiwei4@huawei.com>

--- a/test/unittest/ability_manager_client_branch_test/BUILD.gn
+++ b/test/unittest/ability_manager_client_branch_test/BUILD.gn
@@ -18,6 +18,7 @@ ohos_unittest("ability_manager_client_branch_test") {
   module_out_path = "ability_runtime/ability_call_test"
 
   include_dirs = [
+    "${ability_runtime_test_path}/mock/ability_manager_collaborator",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/system_ability_mock",
     "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
     "${distributedschedule_path}/samgr/adapter/interfaces/innerkits/include/",
