--- a/test/moduletest/running_infos_module_test/BUILD.gn
+++ b/test/moduletest/running_infos_module_test/BUILD.gn
@@ -114,6 +114,7 @@ ohos_moduletest("running_infos_module_test") {
   ]
 
   if (efficiency_manager) {
+    sources += [ "${ability_runtime_services_path}/abilitymgr/src/process_frozen_state_observer.cpp" ]
     cflags_cc += [ "-DEFFICIENCY_MANAGER_ENABLE" ]
     external_deps += [ "efficiency_manager:suspend_manager_client" ]
   }
