--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -231,6 +231,7 @@ ohos_source_set("abilityms_test_source") {
   ]
 
   if (efficiency_manager) {
+    sources += [ "${ability_runtime_services_path}/abilitymgr/src/process_frozen_state_observer.cpp" ]
     cflags_cc += [ "-DEFFICIENCY_MANAGER_ENABLE" ]
     external_deps += [ "efficiency_manager:suspend_manager_client" ]
   }
