adapt two product models
Signed-off-by: xinking129 <xinxin13@huawei.com>

--- a/services/appmgr/BUILD.gn
+++ b/services/appmgr/BUILD.gn
@@ -23,6 +23,7 @@ config("appmgr_config") {
     "${ability_runtime_path}/tools/aa/include",
     "${ability_runtime_path}/utils/global/time/include",
     "${distributeddatamgr_path}/kv_store/interfaces/innerkits/distributeddatamgr/include",
+    "//base/startup/init/interfaces/innerkits/syspara",
   ]
 }
 
