notify config and share file
Signed-off-by: liule21 <liule21@huawei.com>

--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -121,6 +121,7 @@ ohos_shared_library("ability_manager") {
   ]
 
   external_deps = [
+    "ability_base:configuration",
     "ability_base:want",
     "ability_base:zuri",
     "c_utils:utils",
