--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -104,6 +104,7 @@ config("test_exception_config") {
 
 ohos_source_set("abilityms_test_source") {
   sources = [
+    "${ability_runtime_services_path}/abilitymgr/src/ability_background_connection.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_bundle_event_callback.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_connect_callback_stub.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/ability_connect_manager.cpp",
