无障碍节点查询，增加依赖
Signed-off-by: Xing guang <xingguang1@huawei.com>

--- a/ability_runtime.gni
+++ b/ability_runtime.gni
@@ -70,6 +70,7 @@ graphic_2d_path = "//foundation/graphic/graphic_2d"
 srms_inner_api_path =
     "${ability_runtime_path}/service_router_framework/interfaces/inner_api"
 fuzz_test_output_path = "ability_runtime/ability_runtime"
+accessibility_path = "//foundation/barrierfree/accessibility"
 
 declare_args() {
   background_task_mgr_continuous_task_enable = true
