--- a/services/appmgr/BUILD.gn
+++ b/services/appmgr/BUILD.gn
@@ -18,6 +18,7 @@ config("appmgr_config") {
   include_dirs = [
     "include",
     "//third_party/json/include",
+    "${ability_runtime_innerkits_path}/ability_manager/include",
     "${ability_runtime_services_path}/common/include",
     "${appspawn_path}/interfaces/innerkits/include",
     "${ability_runtime_path}/tools/aa/include",
