意图支持绑定ServiceExtension
Signed-off-by: zhangyuhang72 <zhangyuhang72@huawei.com>
Change-Id: I7eb62cfcd6909ee6a1028bc3ec7dd444b1bc26ee

--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -685,7 +685,9 @@ ohos_shared_library("service_extension") {
     "${ability_runtime_napi_path}/inner/napi_common:napi_common",
     "${ability_runtime_native_path}/ability:ability_context_native",
     "${ability_runtime_native_path}/ability/native:ability_business_error",
+    "${ability_runtime_native_path}/ability/native:insight_intent_executor",
     "${ability_runtime_native_path}/appkit:app_context",
+    "${ability_runtime_native_path}/insight_intent/insight_intent_context:insightintentcontext",
   ]
 
   external_deps = [
