--- a/test/unittest/js_service_extension_test/BUILD.gn
+++ b/test/unittest/js_service_extension_test/BUILD.gn
@@ -34,6 +34,8 @@ ohos_unittest("js_service_extension_test") {
 
   configs = [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
   deps = [
+    "${ability_runtime_native_path}/ability/native:insight_intent_executor",
+    "${ability_runtime_native_path}/insight_intent/insight_intent_context:insightintentcontext",
     "//third_party/googletest:gmock_main",
     "//third_party/googletest:gtest_main",
     "//third_party/icu/icu4c:shared_icuuc",
