xuzheheng2@huawei.com
Signed-off-by: xuzheheng <xuzheheng2@huawei.com>
Change-Id: Idb0a20f962b0148080a9b57bfa1a3287663cd7c3

--- a/ability_runtime.gni
+++ b/ability_runtime.gni
@@ -148,4 +148,11 @@ declare_args() {
   } else {
     ecologic_rule_enabled = false
   }
+
+  if (!defined(global_parts_info) ||
+      defined(global_parts_info.hiviewdfx_hichecker)) {
+    hichecker_enabled = true
+  } else {
+    hichecker_enabled = false
+  }
 }
