--- a/frameworks/native/ability/BUILD.gn
+++ b/frameworks/native/ability/BUILD.gn
@@ -38,6 +38,9 @@ config("ability_context_public_config") {
   if (ability_runtime_graphics) {
     defines = [ "SUPPORT_GRAPHICS" ]
   }
+  if (hichecker_enabled) {
+    defines += [ "SUPPORT_HICHECKER" ]
+  }
 }
 
 ohos_shared_library("ability_context_native") {
@@ -75,7 +78,6 @@ ohos_shared_library("ability_context_native") {
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "faultloggerd:libdfx_dumpcatcher",
-    "hichecker:libhichecker",
     "hilog:libhilog",
     "hitrace:hitrace_meter",
     "ipc:ipc_core",
@@ -84,6 +86,10 @@ ohos_shared_library("ability_context_native") {
     "window_manager:scene_session",
     "window_manager:session_manager",
   ]
+
+  if (hichecker_enabled) {
+    external_deps += [ "hichecker:libhichecker" ]
+  }
 
   innerapi_tags = [ "platformsdk" ]
   subsystem_name = "ability"
