--- a/interfaces/inner_api/app_manager/BUILD.gn
+++ b/interfaces/inner_api/app_manager/BUILD.gn
@@ -42,6 +42,7 @@ config("appmgr_core_config") {
 ohos_shared_library("app_manager") {
   include_dirs = [
     "//third_party/json/include",
+    "${ability_runtime_path}/interfaces/kits/native/appkit/dfr",
     "${ability_runtime_services_path}/appmgr/include",
     "${ability_runtime_services_path}/common/include",
   ]
