Message: move appfreeze to dfr
Signed-off-by: yinhuiling <yinhuiling@huawei.com>

--- a/interfaces/inner_api/app_manager/BUILD.gn
+++ b/interfaces/inner_api/app_manager/BUILD.gn
@@ -42,12 +42,13 @@ config("appmgr_core_config") {
 ohos_shared_library("app_manager") {
   include_dirs = [
     "//third_party/json/include",
-    "${ability_runtime_path}/interfaces/kits/native/appkit/dfr",
+    "${ability_runtime_services_path}/appdfr/include",
     "${ability_runtime_services_path}/appmgr/include",
     "${ability_runtime_services_path}/common/include",
   ]
 
   sources = [
+    "${ability_runtime_services_path}/appdfr/src/appfreeze_manager.cpp",
     "src/appmgr/ability_controller_proxy.cpp",
     "src/appmgr/ability_controller_stub.cpp",
     "src/appmgr/ability_debug_response_proxy.cpp",
@@ -80,7 +81,6 @@ ohos_shared_library("app_manager") {
     "src/appmgr/app_state_callback_proxy.cpp",
     "src/appmgr/app_state_data.cpp",
     "src/appmgr/app_task_info.cpp",
-    "src/appmgr/appfreeze_manager.cpp",
     "src/appmgr/application_state_observer_proxy.cpp",
     "src/appmgr/application_state_observer_stub.cpp",
     "src/appmgr/component_interception_proxy.cpp",
