--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -112,7 +112,7 @@ abilityms_files = [
 
 if (ability_runtime_graphics) {
   abilityms_files += [
-    "src/application_anr_listener.cpp",
+    "${ability_runtime_services_path}/appdfr/src/application_anr_listener.cpp",
     "src/implicit_start_processor.cpp",
     "src/system_dialog_scheduler.cpp",
   ]
