--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -34,6 +34,7 @@ config("abilityms_config") {
   include_dirs = [
     "include/",
     "${ability_runtime_innerkits_path}/ability_manager/include",
+    "${ability_runtime_services_path}/appdfr/include",
     "${ability_runtime_innerkits_path}/app_manager/include",
     "${ability_runtime_innerkits_path}/connectionobs_manager/include",
     "${ability_runtime_innerkits_path}/deps_wrapper/include",
@@ -123,6 +124,7 @@ ohos_shared_library("abilityms") {
     ":abilityms_config",
     ":abilityms_exception_config",
   ]
+  include_dirs = [ "${ability_runtime_services_path}/appdfr/include" ]
   deps = [
     "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
     "${ability_runtime_innerkits_path}/ability_manager:ability_start_setting",
