--- a/test/unittest/ability_record_test/BUILD.gn
+++ b/test/unittest/ability_record_test/BUILD.gn
@@ -20,6 +20,7 @@ ohos_unittest("ability_record_test") {
   module_out_path = module_output_path
 
   include_dirs = [
+    "${ability_runtime_services_path}/appdfr/include",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/system_ability_mock",
     "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
     "${ability_runtime_test_path}/mock/common/include",
