--- a/test/unittest/ui_ability_lifecycle_manager_test/BUILD.gn
+++ b/test/unittest/ui_ability_lifecycle_manager_test/BUILD.gn
@@ -21,6 +21,7 @@ ohos_unittest("ui_ability_lifecycle_manager_test") {
   module_out_path = module_output_path
 
   include_dirs = [
+    "${ability_runtime_services_path}/appdfr/include",
     "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
     "mock/include",
   ]
