--- a/test/unittest/js_service_extension_test/BUILD.gn
+++ b/test/unittest/js_service_extension_test/BUILD.gn
@@ -30,7 +30,10 @@ ohos_unittest("js_service_extension_test") {
     "//third_party/json/include",
   ]
 
-  sources = [ "js_service_extension_test.cpp" ]
+  sources = [
+    "${ability_runtime_test_path}/mock/frameworks_kits_ability_native_test/include/mock_insight_intent_executor_mgr.cpp",
+    "js_service_extension_test.cpp",
+  ]
 
   configs = [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
   deps = [
@@ -42,6 +45,7 @@ ohos_unittest("js_service_extension_test") {
   ]
 
   external_deps = [
+    "ability_base:base",
     "ability_base:configuration",
     "ability_base:want",
     "ability_runtime:ability_manager",
