auto fill code 3
Signed-off-by: xinking129 <xinxin13@huawei.com>

--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -41,6 +41,9 @@ group("napi_packages") {
     "${ability_runtime_napi_path}/app/recovery:apprecovery_napi",
     "${ability_runtime_napi_path}/app/test_runner:testrunner_napi",
     "${ability_runtime_napi_path}/application_context_constant:contextconstant_napi",
+    "${ability_runtime_napi_path}/auto_fill_extension_ability:autofillextensionability_napi",
+    "${ability_runtime_napi_path}/auto_fill_extension_context:autofillextensioncontext_napi",
+    "${ability_runtime_napi_path}/auto_fill_manager:autofillmanager_napi",
     "${ability_runtime_napi_path}/callee:callee_napi",
     "${ability_runtime_napi_path}/caller:caller_napi",
     "${ability_runtime_napi_path}/configuration_constant:configurationconstant",
