--- a/frameworks/js/napi/auto_fill_manager/BUILD.gn
+++ b/frameworks/js/napi/auto_fill_manager/BUILD.gn
@@ -13,43 +13,38 @@
 
 import("//build/ohos.gni")
 import("//foundation/ability/ability_runtime/ability_runtime.gni")
+import("//foundation/arkui/ace_engine/ace_config.gni")
 
-config("auto_fill_manager_public_config") {
-  visibility = [ ":*" ]
-  include_dirs = [
-    "include/",
-    "${ability_runtime_services_path}/common/include",
+ohos_shared_library("autofillmanager_napi") {
+  sources = [
+    "auto_fill_manager_module.cpp",
+    "js_auto_fill_manager.cpp",
+    "js_save_request_callback.cpp",
   ]
 
-  cflags = []
-  if (target_cpu == "arm") {
-    cflags += [ "-DBINDER_IPC_32BIT" ]
-  }
-}
+  configs = [ "${ability_runtime_services_path}/common:common_config" ]
 
-ohos_shared_library("auto_fill_manager") {
-  public_configs = [ ":auto_fill_manager_public_config" ]
-
-  sources = [
-    "src/auto_fill_extension_callback.cpp",
-    "src/auto_fill_manager.cpp",
+  include_dirs = [
+    "${ability_runtime_path}/interfaces/inner_api/auto_fill_manager/include",
+    "${ability_runtime_path}/interfaces/kits/native/ability/native/ui_extension_ability",
   ]
 
   deps = [
+    "${ability_runtime_innerkits_path}/auto_fill_manager:auto_fill_manager",
     "${ability_runtime_innerkits_path}/runtime:runtime",
+    "${ability_runtime_napi_path}/inner/napi_common:napi_common",
     "${ability_runtime_native_path}/ability/native:ability_business_error",
   ]
 
   external_deps = [
-    "ability_base:base",
     "ability_base:view_data",
-    "ability_base:want",
     "ace_engine:ace_uicontent",
-    "c_utils:utils",
     "hilog:libhilog",
+    "napi:ace_napi",
   ]
 
-  innerapi_tags = [ "platformsdk" ]
+  relative_install_dir = "module/app/ability"
+
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
