--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -62,6 +62,7 @@ abilityms_files = [
 
   # new ability manager service here
   "src/task_data_persistence_mgr.cpp",
+  "src/ui_extension_ability_connect_manager.cpp",
   "src/start_options.cpp",
   "src/stop_user_callback_proxy.cpp",
   "src/stop_user_callback_stub.cpp",
