头文件依赖
Signed-off-by: donglin <donglin9@huawei.com>
Change-Id: I5be5be8181f9ab7fcccaf49dfe1265c181275bb7

--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -229,7 +229,10 @@ ohos_shared_library("ability_connect_callback_stub") {
   ]
 
   cflags_cc = []
-  innerapi_tags = [ "platformsdk" ]
+  innerapi_tags = [
+    "platformsdk",
+    "sasdk",
+  ]
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
