Description: UIExtension支持递归查询是否聚焦 IssueNo: #I8KVAC Sig: SIG_ApplicationFramework Feature or Bugfix: Feature Binary Source: No
Signed-off-by: yangzk <yangzhongkai@huawei.com>
Change-Id: Id10cbc332045528829bd5b6c48a7d84ee3c7daeb

--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -138,6 +138,8 @@ ohos_source_set("abilityms_test_source") {
     "${ability_runtime_services_path}/abilitymgr/src/data_ability_manager.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/data_ability_record.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/dlp_state_item.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/extension_record.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/extension_record_manager.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/free_install_manager.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/insight_intent_execute_manager.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/insight_intent_profile.cpp",
@@ -153,6 +155,7 @@ ohos_source_set("abilityms_test_source") {
     "${ability_runtime_services_path}/abilitymgr/src/start_ability_handler.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/start_ability_handler/start_ability_sandbox_savefile.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/task_data_persistence_mgr.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/ui_extension_record.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/user_controller.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/user_event_handler.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/want_receiver_proxy.cpp",
