--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -34,6 +34,7 @@ abilityms_files = [
   "src/data_ability_caller_recipient.cpp",
   "src/data_ability_manager.cpp",
   "src/data_ability_record.cpp",
+  "src/dialog_session_record.cpp",
   "src/lifecycle_deal.cpp",
   "src/ability_running_info.cpp",
   "src/extension_config.cpp",
