--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -137,6 +137,7 @@ ohos_source_set("abilityms_test_source") {
     "${ability_runtime_services_path}/abilitymgr/src/data_ability_caller_recipient.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/data_ability_manager.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/data_ability_record.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/dialog_session_record.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/dlp_state_item.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/free_install_manager.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/insight_intent_execute_manager.cpp",
