add features auto fill ability
Signed-off-by: xinking129 <xinxin13@huawei.com>

--- a/services/abilitymgr/BUILD.gn
+++ b/services/abilitymgr/BUILD.gn
@@ -114,7 +114,8 @@ config("abilityms_config") {
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
   }
-  cflags += [ "-DKEY_AUTO_FILL_ABILITY=\"${key_auto_fill_ability}\"" ]
+  cflags +=
+      [ "-DKEY_AUTO_FILL_ABILITY=\"${ability_runtime_auto_fill_ability}\"" ]
 }
 
 ohos_shared_library("abilityms") {
