--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -296,6 +296,7 @@ group("unittest") {
     "ability_connect_callback_stub_test:unittest",
     "ability_connect_manager_test:unittest",
     "ability_connection_test:unittest",
+    "ability_debug_deal_test:unittest",
     "ability_debug_response_proxy_test:unittest",
     "ability_debug_response_stub_test:unittest",
     "ability_event_handler_test:unittest",
