--- a/test/unittest/ability_manager_client_branch_test/BUILD.gn
+++ b/test/unittest/ability_manager_client_branch_test/BUILD.gn
@@ -70,8 +70,6 @@ ohos_unittest("ability_manager_client_branch_test") {
     "init:libbeget_proxy",
     "ipc:ipc_core",
     "napi:ace_napi",
-    "window_manager:libwsutils",
-    "window_manager:scene_session",
   ]
 
   if (background_task_mgr_continuous_task_enable) {
@@ -79,7 +77,11 @@ ohos_unittest("ability_manager_client_branch_test") {
   }
 
   if (ability_runtime_graphics) {
-    external_deps += [ "image_framework:image_native" ]
+    external_deps += [
+      "image_framework:image_native",
+      "window_manager:libwsutils",
+      "window_manager:scene_session",
+    ]
   }
 }
 
