--- a/frameworks/native/appkit/BUILD.gn
+++ b/frameworks/native/appkit/BUILD.gn
@@ -73,7 +73,6 @@ config("appkit_public_config") {
     "${ability_runtime_path}/interfaces/kits/native/appkit/app",
     "${ability_runtime_path}/interfaces/kits/native/appkit/dfr",
     "${global_path}/resource_management/interfaces/inner_api/include",
-    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_bundle_manager_helper",
   ]
 
   if (ability_runtime_graphics) {
@@ -124,6 +123,7 @@ ohos_shared_library("appkit_native") {
     "${ability_runtime_native_path}/appkit/app/application_env.cpp",
     "${ability_runtime_native_path}/appkit/app/application_env_impl.cpp",
     "${ability_runtime_native_path}/appkit/app/application_impl.cpp",
+    "${ability_runtime_native_path}/appkit/app/child_main_thread.cpp",
     "${ability_runtime_native_path}/appkit/app/extension_plugin_info.cpp",
     "${ability_runtime_native_path}/appkit/app/idle_time.cpp",
     "${ability_runtime_native_path}/appkit/app/main_thread.cpp",
@@ -141,6 +141,7 @@ ohos_shared_library("appkit_native") {
     "${ability_runtime_abilitymgr_path}/:abilityms",
     "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
     "${ability_runtime_innerkits_path}/app_manager:app_manager",
+    "${ability_runtime_innerkits_path}/child_process_manager:child_process_manager",
     "${ability_runtime_innerkits_path}/deps_wrapper:ability_deps_wrapper",
     "${ability_runtime_innerkits_path}/runtime:runtime",
     "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
@@ -151,6 +152,7 @@ ohos_shared_library("appkit_native") {
     "${ability_runtime_native_path}/appkit:app_context_utils",
     "${ability_runtime_path}/js_environment/frameworks/js_environment:js_environment",
     "${ability_runtime_path}/utils/global/freeze:freeze_util",
+    "${ability_runtime_services_path}/common:app_util",
   ]
 
   external_deps = [
@@ -221,7 +223,6 @@ ohos_shared_library("app_context") {
     "${ability_base_kits_path}/extractortool/include",
     "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/context",
     "${ability_runtime_path}/interfaces/kits/native/appkit/app",
-    "${ability_runtime_path}/interfaces/kits/native/appkit/ability_bundle_manager_helper",
   ]
 
   configs = [ ":appkit_config" ]
@@ -245,7 +246,6 @@ ohos_shared_library("app_context") {
     "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_innerkits_path}/deps_wrapper:ability_deps_wrapper",
     "${ability_runtime_innerkits_path}/runtime:runtime",
-    "${ability_runtime_native_path}/appkit:appkit_manager_helper",
   ]
 
   external_deps = [
@@ -391,6 +391,10 @@ ohos_shared_library("appkit_delegator") {
   part_name = "ability_runtime"
 }
 
+config("application_context_manager_config") {
+  include_dirs = [ "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/context" ]
+}
+
 ohos_shared_library("appkit_manager_helper") {
   include_dirs = [
     "native",
@@ -428,10 +432,6 @@ ohos_shared_library("appkit_manager_helper") {
   innerapi_tags = [ "platformsdk" ]
   subsystem_name = "ability"
   part_name = "ability_runtime"
-}
-
-config("application_context_manager_config") {
-  include_dirs = [ "${ability_runtime_path}/interfaces/kits/native/appkit/ability_runtime/context" ]
 }
 
 ohos_shared_library("application_context_manager") {
